--- a/css/style.css
+++ b/css/style.css
@@ -224,8 +224,10 @@ body {
 .services__list {
   width: 1160px;
   margin: 0 auto;
+  margin-bottom: 30px;
   display: flex;
   flex-wrap: wrap;
+
 }
 
 .services__img {
@@ -259,7 +261,7 @@ body {
   margin-bottom: 32px;
 }
 
-.services__btn{
+.services__btn {
   display: block;
   box-sizing: border-box;
   width: 160px;
@@ -272,18 +274,18 @@ body {
   line-height: 18px;
   color: #ffffff;
   background-color: #FB565A;
-  border-radius: 3px;
+  border-radius: 4px;
   padding-top: 17px;
   padding-left: 7px;
-  padding-bottom: 15px;
+  padding-bottom: 16px;
   margin-bottom: 50px;
 }
 
-.services__btn--app{
+.services__btn--app {
   background-color: #00CA74;
 }
 
-.services__btn--prezi{
+.services__btn--prezi {
   background-color: #EFC849;
 }
 
@@ -292,6 +294,33 @@ body {
   display: grid;
   grid-template-columns: auto 780px 380px auto;
   grid-template-rows: 270px auto;
+  position: relative;
+  background-image: url(../img/nerds.png);
+  background-repeat: no-repeat;
+  background-position: 920px 40px;
+  padding-bottom: 52px;
+}
+
+.about::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 1158px;
+  height: 2px;
+  background-color: #eeeeee;
+  top: 0;
+  left: calc(50% - 579px);
+}
+
+.about::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 1158px;
+  height: 2px;
+  background-color: #eeeeee;
+  bottom: 0;
+  left: calc(50% - 579px);
 }
 
 .about__description {
@@ -299,6 +328,7 @@ body {
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 2;
+  padding-top: 76px;
 }
 
 .about__development {
@@ -313,26 +343,149 @@ body {
   grid-column-end: 4;
   grid-row-start: 2;
   grid-row-end: 3;
+
 }
+
+.table__caption {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  text-transform: uppercase;
+  padding-top: 16px;
+  padding-left: 22px;
+  margin-bottom: 29px;
+}
+
+.about__title {
+  font-weight: 500;
+  font-size: 45px;
+  line-height: 45px;
+  margin: 0;
+  margin-bottom: 35px;
+}
+
+.about__text {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  width: 650px;
+  margin: 0;
+  color: #283136;
+}
+
+.about__development {
+  padding-top: 17px;
+}
+
+.about__caption {
+  margin: 0;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #283136;
+  margin-bottom: 22px;
+}
+
+.about__item {
+  margin: 0;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  color: #283136;
+  margin-bottom: 24px;
+  padding-left: 36px;
+  position: relative;
+
+}
+
+.about__item::before {
+  position: absolute;
+  content: "";
+  display: block;
+  position: absolute;
+  width: 25px;
+  height: 1px;
+  background-color: #FB565A;
+  top: 12px;
+  left: 0px;
+}
+
+.table {
+  padding-left: 17px;
+}
+
+.table__value {
+  font-weight: bold;
+  font-size: 45px;
+  line-height: 64px;
+  text-align: left;
+  position: relative;
+  width: 124px;
+}
+
+.table__percent {
+  position: absolute;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 40px;
+  top: 2px;
+}
+
+.table__item {
+  font-size: 16px;
+  line-height: 18px;
+  color: #283136;
+  text-align: left;
+  padding-top: 12px;
+}
+
+
 
 .logotypes {
   width: 1160px;
   margin: 0 auto;
+  position: relative;
+}
 
+.logotypes::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 1158px;
+  height: 2px;
+  background-color: #eeeeee;
+  bottom: 0;
+  left: calc(50% - 579px);
 }
 
 .logotypes__list {
   display: flex;
-  justify-content: space-around;
   align-items: center;
-  padding-top: 90px;
-  padding-bottom: 86px;
+  vertical-align: middle;
+  padding-top: 40px;
+  padding-bottom: 42px;
+  margin-bottom: 80px;
 }
 
 .logotypes__item {
-  width: 260px;
+  width: 290px;
   height: 100px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.logotypes__item:not(:last-child)::after {
+  content: "";
   display: block;
+  position: absolute;
+  width: 2px;
+  height: 52px;
+  right: 0;
+  top: 25px;
+  background-color: #eeeeee;
 }
 
 .logotypes__item:hover {
@@ -343,28 +496,61 @@ body {
 .logotypes__logo-html-academy {
   background-image: url(../img/logo-html-academy.svg);
   background-repeat: no-repeat;
+  background-position: 31px 22px;
 }
 
 .logotypes__logo-borodinski {
   background-image: url(../img/logo-barbershop.png);
   background-repeat: no-repeat;
+  background-position: 35px 6px;
 }
 
 .logotypes__logo-pink {
   background-image: url(../img/logo-pink.png);
   background-repeat: no-repeat;
+  background-position: 58px 25px;
 }
 
 .logotypes__logo-Mishka {
   background-image: url(../img/logo-mishka.png);
   background-repeat: no-repeat;
+  background-position: 74px 12px;
 }
 
 
-
+.map__img {
+  height: 416px;
+}
 
 .map,
 .footer {
   width: 1400px;
   margin: 0 auto;
+}
+
+.footer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer__social{
+  width: 300px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  background-color: red;
+}
+
+.footer__friends {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 36px;
+  margin: 0;
+}
+
+.footer__text {
+  font-size: 16px;
+  line-height: 22px;
+  color: #444444;
+  margin: 0;
 }
