--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ body {
 
 .link {
   text-decoration: none;
-  color: var(--basic-black);
+  color: #000000;
   font-style: normal;
 }
 
@@ -86,6 +86,15 @@ body {
   align-items: center;
 }
 
+.header__logo-link{
+  outline: none;
+}
+
+.header__logo-link:active .header__logo path,
+.header__logo-link:focus .header__logo path{
+  fill: #A6A6A6;
+}
+
 .header__nav {
   display: flex;
   flex-wrap: wrap;
@@ -103,16 +112,18 @@ body {
   outline: none;
 }
 
-.header__link:hover {
+
+.header__link:hover{
   color: #FB565A;
 }
 
-.header__link:active {
+.header__link:active{
   color: #000000;
   opacity: 0.3;
 }
 
 .header__link:focus {
+  padding-bottom: 11px;
   border-bottom: 2px solid #FB565A;
 }
 
@@ -124,9 +135,10 @@ body {
   line-height: 30px;
   border: none;
   background-color: transparent;
-  padding-top: 19px;
+  padding-top: 23px;
   padding-right: 0;
   padding-left: 45px;
+  padding-bottom: 10px;
   position: relative;
 }
 
@@ -137,7 +149,7 @@ body {
   background-image: url(../img/icon-cart.svg);
   width: 15px;
   height: 15px;
-  bottom: 9px;
+  bottom: 17px;
   left: 5px;
 }
 
@@ -147,6 +159,10 @@ body {
 
 .header__cart:active {
   color: rgba(0, 0n, 0, 0.3);
+}
+
+.header__cart:focus{
+  border-bottom: 2px solid #FB565A;
 }
 
 .learn-more {
@@ -167,7 +183,7 @@ body {
   padding-bottom: 80px;
 }
 
-.learn-more__item:nth-child(1) {
+.learn-more__item--current {
   display: block;
 }
 
@@ -175,6 +191,18 @@ body {
   background-image: url(../img/slide-1.png);
   background-repeat: no-repeat;
   background-position: 397px -8px;
+}
+
+.learn-more__item--math{
+  background-image: url(../img/slide-2.png);
+  background-repeat: no-repeat;
+  background-position: 397px 0px;
+}
+
+.learn-more__item--night{
+  background-image: url(../img/slide-3.png);
+  background-repeat: no-repeat;
+  background-position: 397px -9px;
 }
 
 .learn-more__caption {
@@ -209,13 +237,56 @@ body {
   padding-top: 17px;
   padding-left: 55px;
   padding-bottom: 15px;
+  outline: none;
 }
 
-.learn-more__slayder {
+.learn-more__slayder{
+  width: 88px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   position: absolute;
-  bottom: 0;
-  left: 50%;
+  bottom: 96px;
+  left: calc(50% - 44px);  
 }
+
+.slayder__btn{
+  width: 18px;
+  height: 18px;
+  background-color: #fff;
+  border: none;
+  outline: none;
+  position: relative;
+  border-radius: 50%;
+}
+
+.slayder__btn--current::after{
+  box-sizing: border-box;
+  position: absolute;
+  display: block;
+  content: "";
+  width: 8px;
+  height: 8px;
+  border: 2px solid #C1C1C1;
+  border-radius: 50%;
+  top:5px;
+  left:5px;
+}
+
+
+
+
+.learn-more__btn:hover{
+  background-color: #E74246;
+}
+.learn-more__btn:active,
+.learn-more__btn:focus{
+  background-color: #D7373B;
+  box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
+  color: rgba(255, 255, 255, 0.3);
+}
+
+
 
 .services {
   padding-top: 80px;
@@ -273,7 +344,7 @@ body {
   text-transform: uppercase;
   line-height: 18px;
   color: #ffffff;
-  background-color: #FB565A;
+  
   border-radius: 4px;
   padding-top: 17px;
   padding-left: 7px;
@@ -281,12 +352,46 @@ body {
   margin-bottom: 50px;
 }
 
+.services__btn--web {
+  background-color: #FB565A;
+}
+
+.services__btn--web:hover{
+  background-color: #E74246;
+}
+.services__btn--web:active,
+.services__btn--web:focus{
+  background-color: #D7373B;
+  box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .services__btn--app {
   background-color: #00CA74;
 }
 
+.services__btn--app:hover{
+  background-color: #00BC6C;
+}
+.services__btn--app:active,
+.services__btn--app:focus{
+  background-color: #00AA62;
+  box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .services__btn--prezi {
   background-color: #EFC849;
+}
+
+.services__btn--prezi:hover{
+  background-color: #EAB534;
+}
+.services__btn--prezi:active,
+.services__btn--prezi:focus{
+  background-color: #E5A722;
+  box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
+  color: rgba(255, 255, 255, 0.3);
 }
 
 
@@ -295,9 +400,6 @@ body {
   grid-template-columns: auto 780px 380px auto;
   grid-template-rows: 270px auto;
   position: relative;
-  background-image: url(../img/nerds.png);
-  background-repeat: no-repeat;
-  background-position: 920px 40px;
   padding-bottom: 52px;
 }
 
@@ -329,6 +431,19 @@ body {
   grid-row-start: 1;
   grid-row-end: 2;
   padding-top: 76px;
+  position: relative;
+}
+
+.about__description::after {
+  position: absolute;
+  display: block;
+  content: "";
+  width: 360px;
+  height: 208px;
+  top: 40px;
+  right: -380px;
+  background-image: url(../img/nerds.png);
+  background-repeat: no-repeat;
 }
 
 .about__development {
@@ -475,6 +590,7 @@ body {
   display: flex;
   align-items: center;
   position: relative;
+  opacity: 0.6;
 }
 
 .logotypes__item:not(:last-child)::after {
@@ -488,9 +604,15 @@ body {
   background-color: #eeeeee;
 }
 
-.logotypes__item:hover {
+.logotypes__item:hover,
+.logotypes__item:focus {
   cursor: pointer;
-  opacity: 0.6;
+  opacity: 1;
+}
+
+.logotypes__item:active {
+  cursor: pointer;
+  opacity: 0.1;
 }
 
 .logotypes__logo-html-academy {
@@ -524,21 +646,21 @@ body {
 
 .map,
 .footer {
-  width: 1400px;
+  width: 1440px;
   margin: 0 auto;
 }
 
 .footer {
   display: flex;
   flex-wrap: wrap;
+  padding-top: 64px;
+  padding-bottom: 69px;
 }
 
-.footer__social{
-  width: 300px;
+.footer__social {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  background-color: red;
+  margin-left: 140px;
 }
 
 .footer__friends {
@@ -546,6 +668,7 @@ body {
   font-size: 36px;
   line-height: 36px;
   margin: 0;
+  margin-bottom: 10px;
 }
 
 .footer__text {
@@ -553,4 +676,53 @@ body {
   line-height: 22px;
   color: #444444;
   margin: 0;
+}
+
+.footer__description {
+  margin-left: 130px;
+  padding-top: 7px;
+
+}
+
+.footer__social-link {
+  display: block;
+  content: "";
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-color: #E1E1E1;
+  margin-right: 10px;
+}
+
+.footer__social-vk {
+  background-image: url(../img/icon-vk.svg);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+ 
+}
+
+.footer__social-fb {
+  background-image: url(../img/icon-fb.svg);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+.footer__social-ig {
+  background-image: url(../img/icon-insta.svg);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+.footer__social-link:hover {
+  background-color: #E74246;
+}
+
+.footer__social-link:active {
+  background-color: #D7373B;
+  box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
+ 
+}
+
+.footer__social-link:active {
+  fill-opacity: 0.3; 
 }
