--- a/css/style.css
+++ b/css/style.css
@@ -640,11 +640,18 @@ body {
 }
 
 
-.map__img {
+.map {
+  width: 1440px;
   height: 416px;
+  margin: 0 auto;
 }
 
-.map,
+.map__block{
+  width: 100%;
+  height: 100%;
+}
+
+
 .footer {
   width: 1440px;
   margin: 0 auto;
