--- a/css/style.css
+++ b/css/style.css
@@ -86,12 +86,12 @@ body {
   align-items: center;
 }
 
-.header__logo-link{
+.header__logo-link {
   outline: none;
 }
 
 .header__logo-link:active .header__logo path,
-.header__logo-link:focus .header__logo path{
+.header__logo-link:focus .header__logo path {
   fill: #A6A6A6;
 }
 
@@ -113,11 +113,11 @@ body {
 }
 
 
-.header__link:hover{
+.header__link:hover {
   color: #FB565A;
 }
 
-.header__link:active{
+.header__link:active {
   color: #000000;
   opacity: 0.3;
 }
@@ -161,7 +161,7 @@ body {
   color: rgba(0, 0n, 0, 0.3);
 }
 
-.header__cart:focus{
+.header__cart:focus {
   border-bottom: 2px solid #FB565A;
 }
 
@@ -193,13 +193,13 @@ body {
   background-position: 397px -8px;
 }
 
-.learn-more__item--math{
+.learn-more__item--math {
   background-image: url(../img/slide-2.png);
   background-repeat: no-repeat;
   background-position: 397px 0px;
 }
 
-.learn-more__item--night{
+.learn-more__item--night {
   background-image: url(../img/slide-3.png);
   background-repeat: no-repeat;
   background-position: 397px -9px;
@@ -240,17 +240,17 @@ body {
   outline: none;
 }
 
-.learn-more__slayder{
+.learn-more__slayder {
   width: 88px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   position: absolute;
   bottom: 96px;
-  left: calc(50% - 44px);  
+  left: calc(50% - 44px);
 }
 
-.slayder__btn{
+.slayder__btn {
   width: 18px;
   height: 18px;
   background-color: #fff;
@@ -260,7 +260,7 @@ body {
   border-radius: 50%;
 }
 
-.slayder__btn--current::after{
+.slayder__btn--current::after {
   box-sizing: border-box;
   position: absolute;
   display: block;
@@ -269,18 +269,19 @@ body {
   height: 8px;
   border: 2px solid #C1C1C1;
   border-radius: 50%;
-  top:5px;
-  left:5px;
+  top: 5px;
+  left: 5px;
 }
 
 
 
 
-.learn-more__btn:hover{
+.learn-more__btn:hover {
   background-color: #E74246;
 }
+
 .learn-more__btn:active,
-.learn-more__btn:focus{
+.learn-more__btn:focus {
   background-color: #D7373B;
   box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
   color: rgba(255, 255, 255, 0.3);
@@ -344,7 +345,7 @@ body {
   text-transform: uppercase;
   line-height: 18px;
   color: #ffffff;
-  
+
   border-radius: 4px;
   padding-top: 17px;
   padding-left: 7px;
@@ -356,11 +357,12 @@ body {
   background-color: #FB565A;
 }
 
-.services__btn--web:hover{
+.services__btn--web:hover {
   background-color: #E74246;
 }
+
 .services__btn--web:active,
-.services__btn--web:focus{
+.services__btn--web:focus {
   background-color: #D7373B;
   box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
   color: rgba(255, 255, 255, 0.3);
@@ -370,11 +372,12 @@ body {
   background-color: #00CA74;
 }
 
-.services__btn--app:hover{
+.services__btn--app:hover {
   background-color: #00BC6C;
 }
+
 .services__btn--app:active,
-.services__btn--app:focus{
+.services__btn--app:focus {
   background-color: #00AA62;
   box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
   color: rgba(255, 255, 255, 0.3);
@@ -384,11 +387,12 @@ body {
   background-color: #EFC849;
 }
 
-.services__btn--prezi:hover{
+.services__btn--prezi:hover {
   background-color: #EAB534;
 }
+
 .services__btn--prezi:active,
-.services__btn--prezi:focus{
+.services__btn--prezi:focus {
   background-color: #E5A722;
   box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
   color: rgba(255, 255, 255, 0.3);
@@ -581,8 +585,10 @@ body {
   vertical-align: middle;
   padding-top: 40px;
   padding-bottom: 42px;
-  margin-bottom: 80px;
+  margin-bottom: 16px;
 }
+
+
 
 .logotypes__item {
   width: 290px;
@@ -604,11 +610,11 @@ body {
   background-color: #eeeeee;
 }
 
-.logotypes__item:hover,
-.logotypes__item:focus {
+.logotypes__item:hover {
   cursor: pointer;
   opacity: 1;
 }
+
 
 .logotypes__item:active {
   cursor: pointer;
@@ -644,11 +650,84 @@ body {
   width: 1440px;
   height: 416px;
   margin: 0 auto;
+  background-image: url(../img/map-with-marker.jpg);
+  position: relative;
+  margin-bottom: 68px;
 }
 
-.map__block{
+.map__block {
   width: 100%;
   height: 100%;
+}
+
+.write-us {
+  position: absolute;
+  width: 319px;
+  height: 308px;
+  top: 54px;
+  left: 140px;
+  background-color: #fff;
+  box-sizing: border-box;
+  padding-top: 49px;
+  padding-left: 50px;
+}
+
+.write-us__title {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 30px;
+  text-transform: uppercase;
+  margin: 0;
+  margin-bottom: 24px;
+}
+
+.write-us__address {
+  width: 210px;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 18px;
+  color: #666666;
+  margin: 0;
+  margin-bottom: 17px;
+}
+
+.write-us__phone {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 18px;
+  color: #666666;
+  margin: 0;
+  margin-bottom: 37px;
+}
+
+.write-us__btn {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background-color: #FB565A;
+  border: none;
+  border-radius: 3px;
+  box-sizing: border-box;
+  padding-top: 18px;
+  padding-left: 45px;
+  padding-right: 44px;
+  padding-bottom: 14px;
+  margin: 0;
+  outline: none;
+}
+
+
+.write-us__btn:hover {
+  background-color: #E74246;
+}
+
+.write-us__btn:active,
+.write-us__btn:focus {
+  background-color: #D7373B;
+  box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
+  color: rgba(255, 255, 255, 0.3);
 }
 
 
@@ -705,7 +784,7 @@ body {
   background-image: url(../img/icon-vk.svg);
   background-repeat: no-repeat;
   background-position: 50% 50%;
- 
+
 }
 
 .footer__social-fb {
@@ -727,9 +806,9 @@ body {
 .footer__social-link:active {
   background-color: #D7373B;
   box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
- 
+
 }
 
 .footer__social-link:active {
-  fill-opacity: 0.3; 
+  fill-opacity: 0.3;
 }
